--- a/dest/css/all.css
+++ b/dest/css/all.css
@@ -230,7 +230,8 @@ a {
   .footer__links-item {
     margin-bottom: 3em;
     width: auto;
-    align-items: flex-start;
+	align-items: center;
+	margin-left: 0;
   }
   .footer__links-item:first-child {
     max-width: 100%;
